# DataForge-CLI

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
dataforge_cli/: __init__.py  __main__.py  cli.py
dataforge_cli/core/: __init__.py  diff.py  formatter.py  merge.py  parser.py  query.py  template.py  transform.py  validator.py
dataforge_cli/tests/: __init__.py  test_diff.py  test_merge.py  test_parser.py  test_query.py  test_transform.py
dataforge_cli/tui/: __init__.py  dashboard.py
dataforge_cli/utils/: __init__.py  colors.py  file_io.py
